--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -1,34 +1,13 @@
-// CSS to apply to all the styles
-
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
-
-/*#menu > .navbar {
-  @include border-radius($border-radius);
-}*/
 
 // Toolbar
 
 #toolbar {
 
   .navbar {
-    //padding-bottom: 0.1em;
-    //padding-top: 0.1em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
-
-// Main menu
-
-/*#menu {
-
-  > .navbar {
-
-    @media (min-width: map-get($grid-breakpoints, "lg")) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-  }
-}*/
 
 // Bottom Menu
 
@@ -37,27 +16,14 @@
   border-bottom: 1px solid $gray-700;
 }
 
-.wrapper-footer {
-
-}
-
 // Footer
-
-.footer1,
-.footer2 {
-  text-align: center;
-}
 
 #footer {
   color: $white;
-  overflow: hidden;
   background-color: $gray-900;
 
   .footer-content {
-
-    a:hover {
-      color: $gray-700;
-    }
+    @extend .p-b-1;
   }
 
   .moduletable,
