--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6826,12 +6826,6 @@ a.hidden-text span.hidden-text {
 .blog-featured .items-more ~ .cat-children {
   margin-top: 3rem; }
 
-p.img_caption {
-  background: none repeat scroll 0 0 #e9ecef;
-  font-size: 0.75em;
-  font-style: italic;
-  text-align: left; }
-
 .readmore .btn {
   white-space: normal; }
 
@@ -6839,6 +6833,12 @@ p.img_caption {
   margin-top: 7px;
   margin-bottom: 1rem;
   max-width: 100%; }
+  .item-image .caption {
+    background: #e9ecef;
+    font-size: 0.75em;
+    text-align: center;
+    padding: 5px;
+    margin-top: 2px; }
 
 ul.tags {
   margin-bottom: 1rem; }
